# ares_bot

./: .gitignore  README.md  __init__.py  pyproject.toml
app/libs/: bot.py  constants.py
app/modules/: commands.py  general.py  logger.py  twitch.py
app/utils/: bot.py  constants.py  logger.py
